--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,6 +267,133 @@ li.more-movies a:hover {
 	background-color: #CCC;
 }
 
+/* LOGIN */
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 5px auto; /* 15% from the top and centered */
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    /* Position it in the top right corner outside of the modal */
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+/* Close button on hover */
+.close:hover,
+.close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
+}
+
+@keyframes animatezoom {
+    from {transform: scale(0)}
+    to {transform: scale(1)}
+}
+
+/* Bordered form */
+
+
+/* Full-width inputs */
+#uname, #psw {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+    background-color: #FF8D1B;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+/* Add a hover effect for buttons */
+button:hover {
+    opacity: 0.8;
+}
+
+/* Extra style for the cancel button (red) */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+/* Center the avatar image inside this container */
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+}
+
+/* Avatar image */
+img.avatar {
+    width: 20%;
+    border-radius: 50%;
+}
+
+/* Add padding to containers */
+.container {
+    padding: 16px;
+}
+
+/* The "Forgot password" text */
+span.psw {
+    float: right;
+    padding-top: 16px;
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+        display: block;
+        float: none;
+    }
+    .cancelbtn {
+        width: 100%;
+    }
+}
 
 
 /*SOCIAL NETWORKS*/
@@ -465,32 +592,43 @@ li.more-movies a:hover {
 
 /* /////////////////////ANCRE/////////////////*/
 
-/*.bounce {position:relative;
- 		 left:50%;
- 		 bottom:0;
-  		 margin-top:-25px;
-  		 margin-left:-25px;
-  	   	 height:50px;
-  		 width:50px;
- 		 -webkit-animation:bounce 1s infinite;
-		 }
+.title_ancre {
+    font-size: 25px;
+    margin-left: -50px;
+    border-left: 3px solid #FF8D1B;
+    padding-left: 10px;
+    margin-top: 70px;
+    margin-bottom: 20px;
+}
 
-@-webkit-keyframes bounce {	0%       { bottom:5px; }
-  							25%, 75% { bottom:15px; }
-  							50%      { bottom:20px; }
-  							100%     {bottom:0;}
-							}
+.arrow {
+    width: 110px;
+    height: 130px;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+}
 
-.bounce {display: flex;
-		justify-content: center;
-		}
+a#return{
+  position:fixed;
+  right:20px;
+  z-index:99999;
+  transition:all ease-in 0.2s;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  text-decoration: none;
+}
 
-i { border: solid #1cb0a1 !important;
-    border-width: 0 3px 3px 0!important;
-    display: inline-block!important;
-    padding: 10px!important;
-	}
+a#return:hover{
+  transition:all ease-in 0.2s;
+}
+a#return.invisible{
+  bottom:-35px;
+  opacity:0;
+  transition:all ease-in 0.5s;
+}
 
-.arrow_down {transform: rotate(45deg)!important;
-    		-webkit-transform: rotate(45deg)!important;
-			}*/
+a#return.visible{
+  bottom:20px;
+  opacity:1;
+}
