--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,7 @@ a{
 #taille {
     width: 300px;
     margin-left: 25px;
+    margin-top: -11px
 }
 #element{
     margin-left: 25px;
@@ -178,7 +179,8 @@ a{
 .library-movie{
 	width: 100%;
 	display: flex;
-	margin: 20px 0;
+	margin-top: 20px;
+  margin-left: 20px;
 	border: solid 2px #DCDCDC;
 	border-radius: 7px;
 }
@@ -193,14 +195,14 @@ a{
 	width: 20%;
 }
 .library-featured-col{
-	width: 16.66%;
+	width: 20%;
 }
 .library-container{
 	margin: 20px;
 	text-align: center;
 }
 .library-movie img, .library-featured img{
-	width:180px;
+	width:100%;
 	display: inline-block;
 }
 span.year{
@@ -341,12 +343,18 @@ li.more-movies a:hover {
 /* Set a style for all buttons */
 button {
     background-color: #FF8D1B;
-    color: white;
-    padding: 14px 20px;
     margin: 8px 0;
     border: none;
     cursor: pointer;
     width: 100%;
+    color: #fff;
+    display: inline-block;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: #FF8D1B;
+    text-align: center;
+    padding: 10px 30px;
+    font-weight: bold;
 }
 
 /* Add a hover effect for buttons */
@@ -499,6 +507,103 @@ span.psw {
 
 /*FOOTER*/
 
+
+/*Black box*/
+.black{
+    background-color: black;
+    height:255px;
+    width:218px;
+    margin-bottom: 10px
+}
+.circle {
+    background : #FF8D1B;
+    border-radius : 50%;
+    width : 40px;
+    height : 40px;
+    text-align : center;
+    position : relative;
+    top : -20px;
+    left : 40%;
+    }
+.circle i {
+    margin-top : 10px;
+    color: white;
+    font-size: 20px
+    }
+.bbox {
+    color: white;
+    font-size: 23px;
+    margin-left: 20px;
+}
+
+.myfacebook{
+    background:#3b5998;
+    margin-left: 20px;
+    width: 40px;
+    height: 40px;
+}
+#myfacebookimage {
+    color: white;
+    padding-left: 12px;
+    padding-top: 11px;
+}
+.myfacebooktexte {
+    color: white;
+    font-size:18px;
+    background-color: #5574b2;
+    margin-left: 40px;
+    height: 40px;
+    width: 125px;
+    margin-top: -28px;
+    text-align: center;
+    padding-top: 10px;
+}
+.mytwitter{
+background:#1da1f2;
+margin-left: 20px;
+width: 40px;
+height: 40px;
+}
+#mytwitterimage {
+color: white;
+padding-left: 12px;
+padding-top: 11px;
+}
+.mytwittertexte {
+color: white;
+font-size:18px;
+background-color: #6bbfef;
+margin-left: 40px;
+height: 40px;
+width: 125px;
+margin-top: -28px;
+text-align: center;
+padding-top: 10px;
+}
+.mygoogle{
+background:#dd4b39;
+margin-left: 20px;
+width: 40px;
+height: 40px;
+}
+#mygoogleimage {
+color: white;
+padding-left: 12px;
+padding-top: 11px;
+}
+.mygoogletexte {
+color: white;
+font-size:18px;
+background-color: #ef796b;
+margin-left: 40px;
+height: 40px;
+width: 125px;
+margin-top: -28px;
+text-align: center;
+padding-top: 10px;
+}
+
+
 /* Contact */
 
 #form {
@@ -631,4 +736,27 @@ a#return.invisible{
 a#return.visible{
   bottom:20px;
   opacity:1;
+}
+
+#shop_content {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  height: 400px;
+}
+#shop_content .description{
+  width: 50%;
+  background: red;;
+}
+
+#shop_content .vid{
+width: 50%;
+}
+
+#shop_content iframe{
+  width: : 100%;
+}
+
+.hide, .hidden{
+  display: none;
 }
